chore: 🎨 Update auto complete attributes, fix issue with callout on mobile

--- a/app/components/02-molecules/callout/callout.module.css
+++ b/app/components/02-molecules/callout/callout.module.css
@@ -7,8 +7,12 @@
 	color: var(--color-core-foreground);
 	display: inline-flex;
 	gap: calc(var(--base-spacing) * 1.5);
-	inline-size: max-content;
+	max-inline-size: max-content;
 	padding: calc(var(--base-spacing) * 1.8) calc(var(--base-spacing) * 2);
+
+	& > :not(svg) {
+		flex: 1;
+	}
 }
 
 .background {
