--- a/app/components/03-organisms/hero/hero.module.css
+++ b/app/components/03-organisms/hero/hero.module.css
@@ -5,7 +5,7 @@
 .container,
 .content {
 	& > :not([hidden]) ~ :not([hidden]) {
-		margin-block-start: calc(var(--base-spacing) * 4);
+		margin-block-start: calc(var(--base-spacing) * 3);
 	}
 }
 
